deployment/booking.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: booking-server
  template:
    metadata:
      labels:
        app: booking-server
    spec:
      containers:
        - name: booking-server
          image: huyfst/booking-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
