deployment/hotel.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hotel-server
  template:
    metadata:
      labels:
        app: hotel-server
    spec:
      containers:
        - name: hotel-server
          image: huyfst/hotel-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
