deployment/inventory.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inventory-server
  template:
    metadata:
      labels:
        app: inventory-server
    spec:
      containers:
        - name: inventory-server
          image: huyfst/inventory-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
