deployment/user.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-server
  template:
    metadata:
      labels:
        app: user-server
    spec:
      containers:
        - name: user-server
          image: huyfst/user-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3005
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
