deployment/auth.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server
spec:
  selector:
    app: auth-server
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
