deployment/booking.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-server
spec:
  selector:
    app: booking-server
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
