deployment/hotel.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-server
spec:
  selector:
    app: hotel-server
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
