deployment/inventory.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-server
spec:
  selector:
    app: inventory-server
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
