deployment/notification.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-server
spec:
  selector:
    app: notification-server
  ports:
    - port: 3006
      targetPort: 3006
  type: ClusterIP
