deployment/orchestrator.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-server
spec:
  selector:
    app: orchestrator-server
  ports:
    - port: 3007
      targetPort: 3007
  type: ClusterIP
