deployment/user.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-server
spec:
  selector:
    app: user-server
  ports:
    - port: 3005
      targetPort: 3005
  type: ClusterIP
